--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id 'java'
 }
 
-group 'org.example'
+group 'unitTestBasic2021'
 version '1.0-SNAPSHOT'
 
 repositories {
@@ -10,10 +10,13 @@ repositories {
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
-}
+    testCompile group: 'junit', name: 'junit', version: '4.12'
 
-test {
-    useJUnitPlatform()
+    testImplementation group: 'org.powermock', name: 'powermock-module-junit4', version: '2.0.9'
+    testImplementation group: 'org.powermock', name: 'powermock-api-mockito2', version: '2.0.9'
+    testImplementation group: 'org.powermock', name: 'powermock-api-easymock', version: '2.0.9'
+    testImplementation group: 'org.powermock', name: 'powermock-classloading-xstream', version: '2.0.9'
+    testImplementation group: 'org.mockito', name: 'mockito-core', version: '3.7.7'
+    testImplementation group: 'org.mockito', name: 'mockito-all', version: '2.0.2-beta'
+
 }
